--- a/conformance/tests/gateway-observed-generation-bump.yaml
+++ b/conformance/tests/gateway-observed-generation-bump.yaml
@@ -8,6 +8,7 @@ spec:
   listeners:
     - name: http
       port: 80
+      hostname: "*.avi.lol"
       protocol: HTTP
       allowedRoutes:
         namespaces:
