--- a/conformance/tests/gateway-secret-invalid-reference-grant.yaml
+++ b/conformance/tests/gateway-secret-invalid-reference-grant.yaml
@@ -9,6 +9,7 @@ spec:
     - name: https
       port: 443
       protocol: HTTPS
+      hostname: "*.avi.lol"
       allowedRoutes:
         namespaces:
           from: All
