--- a/conformance/tests/gateway-secret-reference-grant-all-in-namespace.yaml
+++ b/conformance/tests/gateway-secret-reference-grant-all-in-namespace.yaml
@@ -8,6 +8,7 @@ spec:
   listeners:
     - name: https
       port: 443
+      hostname: "*.avi.lol"
       protocol: HTTPS
       allowedRoutes:
         namespaces:
