--- a/conformance/tests/httproute-redirect-port-and-scheme.yaml
+++ b/conformance/tests/httproute-redirect-port-and-scheme.yaml
@@ -8,6 +8,7 @@ spec:
   listeners:
   - name: http
     port: 8080
+    hostname: "*.avi.lol"
     protocol: HTTP
     allowedRoutes:
       namespaces:
