--- a/conformance/tests/gateway-invalid-route-kind.yaml
+++ b/conformance/tests/gateway-invalid-route-kind.yaml
@@ -8,6 +8,7 @@ spec:
   listeners:
     - name: http
       port: 80
+      hostname: "*.avi.lol"
       protocol: HTTP
       allowedRoutes:
         namespaces:
@@ -25,6 +26,7 @@ spec:
   listeners:
     - name: http
       port: 80
+      hostname: "*.avi.lol"
       protocol: HTTP
       allowedRoutes:
         namespaces:
