--- a/conformance/tests/gateway-invalid-tls-configuration.yaml
+++ b/conformance/tests/gateway-invalid-tls-configuration.yaml
@@ -7,6 +7,7 @@ spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
   listeners:
     - name: https
+      hostname: "*.avi.lol"
       port: 443
       protocol: HTTPS
       allowedRoutes:
@@ -27,6 +28,7 @@ spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
   listeners:
     - name: https
+      hostname: "*.avi.lol"
       port: 443
       protocol: HTTPS
       allowedRoutes:
@@ -47,6 +49,7 @@ spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
   listeners:
     - name: https
+      hostname: "*.avi.lol"
       port: 443
       protocol: HTTPS
       allowedRoutes:
@@ -67,6 +70,7 @@ spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
   listeners:
     - name: https
+      hostname: "*.avi.lol"
       port: 443
       protocol: HTTPS
       allowedRoutes:
