--- a/conformance/tests/httproute-invalid-parentref-section-name-not-matching-port.yaml
+++ b/conformance/tests/httproute-invalid-parentref-section-name-not-matching-port.yaml
@@ -9,6 +9,7 @@ spec:
   - name: http
     port: 80
     protocol: HTTP
+    hostname: "*.avi.lol"
     allowedRoutes:
       kinds:
       - kind: HTTPRoute
