hardcode gateway-class to avi-lb and don't clean up test resources

--- a/conformance/tests/gateway-modify-listeners.yaml
+++ b/conformance/tests/gateway-modify-listeners.yaml
@@ -59,6 +59,7 @@ spec:
   - name: http
     port: 80
     protocol: HTTP
+    hostname: "*.avi.lol"
     allowedRoutes:
       namespaces:
         from: All
